@@ -96,7 +96,11 @@ void fstream::detach (void)
 	0,		// nocreate
 	O_NOCTTY	// noctty
     };
-    int flags = (m - 1) & O_ACCMODE;	// in and out
+    int flags;
+    if (O_RDONLY == in-1 && O_WRONLY == out-1 && O_RDWR == (in|out)-1)
+	flags = (m - 1) & O_ACCMODE;
+    else
+	flags = ((m&(in|out))==(in|out)) ? O_RDWR : ((m&out) ? O_WRONLY : O_RDONLY);
     for (uoff_t i = 0; i < VectorSize(s_OMFlags); ++ i)
 	flags |= s_OMFlags[i] & (!(m & (1 << i)) - 1);
     if (m & nocreate)
