@@ -5,6 +5,16 @@
 
 #include "stdtest.h"
 
+#ifdef CYGIMP_USTL_TESTS_BVT25_ROMFS
+# include <cyg/fileio/fileio.h>
+# if (CYG_BYTEORDER == CYG_LSBFIRST)
+#  include <cyg/ustl/bvt25fs_le.h>
+# else
+#  include <cyg/ustl/bvt25fs_be.h>
+# endif
+MTAB_ENTRY(romfs_mte1, "/", "romfs", "", (CYG_ADDRWORD) &filedata[0]);
+#endif
+
 void TestFStream (void)
 {
     fstream fs ("bvt/bvt25.std", ios::in | ios::nocreate);
